--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -4,7 +4,13 @@
   <span class="todo-count"><strong>0</strong> tareas pendientes</span>
   <!-- Remove this if you don't implement routing -->
   <ul class="filters">
-    <li>
+    <li *ngFor="let filtro of filtros"
+        (click)="cambiarFiltro( filtro )">
+      <a href="#/"
+        [class.selected]="filtro === filtroActual"
+      >{{filtro}}</a>
+    </li>
+  <!--<li>
       <a class="selected" href="#/">Todos</a>
     </li>
     <li>
@@ -13,7 +19,9 @@
     <li>
       <a href="#/completed">Compeletados</a>
     </li>
+     -->
   </ul>
+
   <!-- Hidden if no completed items are left ↓ -->
   <button class="clear-completed">Borrar completados</button>
 </footer>
