--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -12,6 +12,7 @@
 
   </ul>
 
-  <!-- Hidden if no completed items are left ↓ -->
-  <button class="clear-completed">Borrar completados</button>
+
+  <button class="clear-completed"
+(click)="limpiartCompletados()">Borrar completados</button>
 </footer>
